--- a/Hyperparameter_tuning.ipynb
+++ b/Hyperparameter_tuning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "ab53451a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "5151e27e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "id": "3f1203cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "64b0e432",
    "metadata": {},
    "outputs": [],
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "b2d4eb7f",
    "metadata": {},
    "outputs": [],
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "98236730",
    "metadata": {
     "scrolled": true
@@ -60,66 +70,28 @@
     "data['class']=label_encoder.fit_transform(data['class'])\n",
     "x=data.drop(['class'],axis=1)\n",
     "y=data['class']\n",
-    "x_train,x_test,y_train,y_test=train_test_split(x,y)"
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.33, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "15fc93d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "params in curently in use\n",
-      "{'bootstrap': True,\n",
-      " 'ccp_alpha': 0.0,\n",
-      " 'class_weight': None,\n",
-      " 'criterion': 'gini',\n",
-      " 'max_depth': None,\n",
-      " 'max_features': 'auto',\n",
-      " 'max_leaf_nodes': None,\n",
-      " 'max_samples': None,\n",
-      " 'min_impurity_decrease': 0.0,\n",
-      " 'min_impurity_split': None,\n",
-      " 'min_samples_leaf': 1,\n",
-      " 'min_samples_split': 2,\n",
-      " 'min_weight_fraction_leaf': 0.0,\n",
-      " 'n_estimators': 100,\n",
-      " 'n_jobs': None,\n",
-      " 'oob_score': False,\n",
-      " 'random_state': 43,\n",
-      " 'verbose': 0,\n",
-      " 'warm_start': False}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"params in curently in use\")\n",
-    "pprint(rc.get_params())"
+    "# print(\"params in curently in use\")\n",
+    "# pprint(rc.get_params())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "6bcc199d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'bootstrap': [True, False],\n",
-      " 'max_depth': [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, None],\n",
-      " 'max_features': ['auto', 'sqrt'],\n",
-      " 'min_samples_leaf': [1, 2, 4],\n",
-      " 'min_samples_split': [2, 5, 10],\n",
-      " 'n_estimators': [200, 400, 600, 800, 1000, 1200, 1400, 1600, 1800, 2000]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_estimators = [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)]\n",
     "max_features = ['auto', 'sqrt']\n",
@@ -134,12 +106,12 @@
     "               'min_samples_split': min_samples_split,\n",
     "               'min_samples_leaf': min_samples_leaf,\n",
     "               'bootstrap': bootstrap}\n",
-    "pprint(random_grid)"
+    "# pprint(random_grid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "b8605771",
    "metadata": {},
    "outputs": [
@@ -168,7 +140,7 @@
        "                   random_state=42, verbose=2)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,33 +148,114 @@
    "source": [
     "rf = RandomForestClassifier()\n",
     "rf_random = RandomizedSearchCV(estimator = rf, param_distributions = random_grid, n_iter = 100, cv = 3, verbose=2, random_state=42, n_jobs = -1)\n",
-    "rf_random.fit(x,y)"
+    "rf_random.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "e5aa5b9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rf_random.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f051f215",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n_estimators': 1000,\n",
-       " 'min_samples_split': 5,\n",
-       " 'min_samples_leaf': 4,\n",
-       " 'max_features': 'auto',\n",
-       " 'max_depth': 100,\n",
-       " 'bootstrap': True}"
+       "RandomForestClassifier(n_estimators=10, random_state=42)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rf_random.best_params_"
+    "# def evaluate(model,X_test, y_test):\n",
+    "#     predictions = model.predict(x)\n",
+    "#     errors = abs(predictions - y)\n",
+    "#     mape = 100 * np.mean(errors / y)\n",
+    "#     accuracy = 100 - mape\n",
+    "#     print('Model Performance')\n",
+    "#     print('Average Error: {:0.4f} degrees.'.format(np.mean(errors)))\n",
+    "#     print('Accuracy = {:0.2f}%.'.format(accuracy))\n",
+    "    \n",
+    "#     return accuracy\n",
+    "\n",
+    "\n",
+    "base_model = RandomForestClassifier(n_estimators=10, random_state = 42)\n",
+    "base_model.fit(X_test, y_test)\n",
+    "# base_accuracy = evaluate(base_model, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2475598a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=10, random_state=42)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base_model.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1510d89e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6833333333333333"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# base_model.score(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "63f8cf09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred=base_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f29dcea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(y_test,)"
    ]
   }
  ],
