--- a/Running  on multiple models.ipynb
+++ b/Running  on multiple models.ipynb
@@ -2,11 +2,173 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1784f749",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler,PolynomialFeatures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "81d440ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder=LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f8261487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data=pd.read_csv(\"C:/Users/Yuthayakarthick/Documents/Amal_Docs_Codes/Data_sets/emoji-full-codes-csv-printout - Copy.csv\")\n",
+    "data = data[:181]\n",
+    "data=data.drop(['emojis','discription','hex value'],axis=1)\n",
+    "data['class']=label_encoder.fit_transform(data['class'])\n",
+    "x=data.drop(['class'],axis=1)\n",
+    "y=data['class']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "43aa6add",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('normalizer', StandardScaler()), ('clf', LogisticRegression())]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('normalizer', StandardScaler()), #Step1 - normalize data\n",
+    "    ('clf', LogisticRegression()) #step2 - classifier\n",
+    "])\n",
+    "pipeline.steps\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "76d5971b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "LogisticRegression()\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.012565088272094727\n",
+      "fit_time  std  0.0198521502315215\n",
+      "score_time  mean  0.0\n",
+      "score_time  std  0.0\n",
+      "test_score  mean  0.38\n",
+      "test_score  std  0.010000000000000009\n",
+      "---------------------------------\n",
+      "SVC()\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.006266212463378907\n",
+      "fit_time  std  0.007674558512713353\n",
+      "score_time  mean  0.0\n",
+      "score_time  std  0.0\n",
+      "test_score  mean  0.38\n",
+      "test_score  std  0.010000000000000009\n",
+      "---------------------------------\n",
+      "KNeighborsClassifier(n_neighbors=3)\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.0031246185302734376\n",
+      "fit_time  std  0.006249237060546876\n",
+      "score_time  mean  0.0\n",
+      "score_time  std  0.0\n",
+      "test_score  mean  0.5703333333333334\n",
+      "test_score  std  0.03132978703335783\n",
+      "---------------------------------\n",
+      "DecisionTreeClassifier()\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.003125762939453125\n",
+      "fit_time  std  0.00625152587890625\n",
+      "score_time  mean  0.0\n",
+      "score_time  std  0.0\n",
+      "test_score  mean  0.619\n",
+      "test_score  std  0.07926467617349414\n",
+      "---------------------------------\n",
+      "RandomForestClassifier()\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.07237906455993652\n",
+      "fit_time  std  0.0077833971123773245\n",
+      "score_time  mean  0.003127384185791016\n",
+      "score_time  std  0.006254768371582032\n",
+      "test_score  mean  0.619\n",
+      "test_score  std  0.07926467617349414\n",
+      "---------------------------------\n",
+      "GaussianNB()\n",
+      "-----------------------------------\n",
+      "fit_time  mean  0.003122758865356445\n",
+      "fit_time  std  0.00624551773071289\n",
+      "score_time  mean  0.0\n",
+      "score_time  std  0.0\n",
+      "test_score  mean  0.33899999999999997\n",
+      "test_score  std  0.01872609587358419\n"
+     ]
+    }
+   ],
+   "source": [
+    "clfs = []\n",
+    "clfs.append(LogisticRegression())\n",
+    "clfs.append(SVC())\n",
+    "clfs.append(KNeighborsClassifier(n_neighbors=3))\n",
+    "clfs.append(DecisionTreeClassifier())\n",
+    "clfs.append(RandomForestClassifier())\n",
+    "clfs.append(GaussianNB())\n",
+    "\n",
+    "for classifier in clfs:\n",
+    "    pipeline.set_params(clf = classifier)\n",
+    "    scores = cross_validate(pipeline, X_train, y_train)\n",
+    "    print('---------------------------------')\n",
+    "    print(str(classifier))\n",
+    "    print('-----------------------------------')\n",
+    "    for key, values in scores.items():\n",
+    "        print(key,' mean ', values.mean())\n",
+    "        print(key,' std ', values.std())"
+   ]
   }
  ],
  "metadata": {
