--- a/Imoji_classifier.ipynb
+++ b/Imoji_classifier.ipynb
@@ -499,17 +499,17 @@
      "output_type": "stream",
      "text": [
       "     decimal\n",
-      "123   128145\n",
-      "51    128526\n",
-      "131   128118\n",
-      "153   128585\n",
-      "18    128537\n",
+      "162   128064\n",
+      "143   128571\n",
+      "78     10067\n",
+      "28    128529\n",
+      "172     9729\n",
       "..       ...\n",
-      "179   128049\n",
-      "80     10068\n",
-      "148   128569\n",
-      "167   128101\n",
-      "11    128524\n",
+      "1     128518\n",
+      "105   128170\n",
+      "33    128532\n",
+      "47    128548\n",
+      "92      9994\n",
       "\n",
       "[135 rows x 1 columns]\n"
      ]
@@ -529,17 +529,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "123    1\n",
-      "51     2\n",
-      "131    1\n",
-      "153    0\n",
-      "18     2\n",
+      "162    1\n",
+      "143    2\n",
+      "78     0\n",
+      "28     0\n",
+      "172    1\n",
       "      ..\n",
-      "179    1\n",
-      "80     1\n",
-      "148    2\n",
-      "167    1\n",
-      "11     2\n",
+      "1      2\n",
+      "105    2\n",
+      "33     0\n",
+      "47     0\n",
+      "92     0\n",
       "Name: class, Length: 135, dtype: int32\n"
      ]
     }
@@ -550,17 +550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "9811d53f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5869565217391305"
+       "0.6956521739130435"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,10 +573,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "2bcc0b17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "illegal target for annotation (Temp/ipykernel_15948/1023065145.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\YUTHAY~1\\AppData\\Local\\Temp/ipykernel_15948/1023065145.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    'n_estimators': 1000,\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m illegal target for annotation\n"
+     ]
+    }
+   ],
    "source": [
     "'n_estimators': 1000,\n",
     " 'min_samples_split': 5,\n",
@@ -588,21 +597,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "60343ba6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.21739130434782608"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "svc.fit(x_train,y_train)\n",
     "svc.score(x_test,y_test)"
@@ -610,21 +608,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1744d509",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.15217391304347827"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lr.fit(x_train,y_train)\n",
     "lr.score(x_test,y_test)\n"
@@ -632,28 +619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "5fc0592b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.classes_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f9cd42f5",
    "metadata": {},
    "outputs": [],
@@ -665,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "c02502da",
    "metadata": {},
    "outputs": [],
@@ -679,29 +655,26 @@
    "id": "f2c99af8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# base_model = RandomForestClassifier(n_estimators=10, random_state = 42)\n",
+    "# base_model.fit(x_train, y_train)\n",
+    "# pred=base_model.predict(x_test)\n",
+    "# accuracy_score(pred,y_test)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "7b3a30da",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy: 71.73913043478261\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"accuracy:\",accuracy_score(pred,y_test)*100)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "91b79506",
    "metadata": {},
    "outputs": [],
@@ -712,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "b7e710d6",
    "metadata": {},
    "outputs": [],
@@ -723,21 +696,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "24db6348",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KFold(n_splits=9, random_state=None, shuffle=False)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
     "kf=KFold(n_splits=9)\n",
@@ -746,26 +708,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7b05e376",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6 7 8] [0]\n",
-      "[0 2 3 4 5 6 7 8] [1]\n",
-      "[0 1 3 4 5 6 7 8] [2]\n",
-      "[0 1 2 4 5 6 7 8] [3]\n",
-      "[0 1 2 3 5 6 7 8] [4]\n",
-      "[0 1 2 3 4 6 7 8] [5]\n",
-      "[0 1 2 3 4 5 7 8] [6]\n",
-      "[0 1 2 3 4 5 6 8] [7]\n",
-      "[0 1 2 3 4 5 6 7] [8]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for train_index, test_index in kf.split([1,2,3,4,5,6,7,8,9]):\n",
     "    print(train_index, test_index)"
@@ -794,6 +740,22 @@
     "score_rf=[]\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3e6aefcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfbd584d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
