--- a/Running  on multiple models.ipynb
+++ b/Running  on multiple models.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "81d440ae",
+   "id": "1cc1a844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f8261487",
+   "id": "0c857611",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "43aa6add",
+   "id": "cd82f345",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "76d5971b",
+   "id": "5c0a2bb6",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,8 @@
     "    print('-----------------------------------')\n",
     "    for key, values in scores.items():\n",
     "        print(key,' mean ', values.mean())\n",
-    "        print(key,' std ', values.std())"
+    "        print(key,' std ', values.std())\n",
+    "        "
    ]
   }
  ],
