--- a/Running  on multiple models.ipynb
+++ b/Running  on multiple models.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1cc1a844",
+   "id": "6c24653c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0c857611",
+   "id": "c200e2aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cd82f345",
+   "id": "b8545cce",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5c0a2bb6",
+   "id": "00a4e42d",
    "metadata": {},
    "outputs": [
     {
@@ -170,6 +170,125 @@
     "        print(key,' std ', values.std())\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4813668d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "performance_score=pd.DataFrame(scores)\n",
+    "models=pd.DataFrame(clfs)\n",
+    "performance=pd.concat([models,performance_score],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d2a41014",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>fit_time</th>\n",
+       "      <th>score_time</th>\n",
+       "      <th>test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LogisticRegression()</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.320000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SVC()</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>KNeighborsClassifier(n_neighbors=3)</td>\n",
+       "      <td>0.015614</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DecisionTreeClassifier()</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RandomForestClassifier()</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>GaussianNB()</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     0  fit_time  score_time  test_score\n",
+       "0                 LogisticRegression()  0.000000         0.0    0.320000\n",
+       "1                                SVC()  0.000000         0.0    0.333333\n",
+       "2  KNeighborsClassifier(n_neighbors=3)  0.015614         0.0    0.333333\n",
+       "3             DecisionTreeClassifier()  0.000000         0.0    0.375000\n",
+       "4             RandomForestClassifier()  0.000000         0.0    0.333333\n",
+       "5                         GaussianNB()       NaN         NaN         NaN"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "992aa8b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
